--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>Yakında | AS SİNERJİ</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +21,11 @@
 
     <!-- Custom styles for this template -->
     <link href="coming-soon.min.css" rel="stylesheet">
+    <style>
+      body{
+        font-family: 'Source Sans Pro', sans-serif;
+      }
+    </style>
 
   </head>
 
@@ -36,17 +42,17 @@
         <div class="row h-100">
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
-              <h1 class="mb-3">YAKINDA!</h1>
+              <h1 class="mb-3">AS SİNERJİ MAKİNE OTOMASYON</h1>
               <p class="mb-5">
                 Web sitemiz yakında hizmetinize girecektir. Bu sürede bize aşağıdaki bilgiler üzerinden ulaşabilirsiniz.
               </p>
               <p class="mb-5">
                 <ul>
                     <li>
-                      <strong>Adres:</strong> AS SİNERJİ
+                      <strong>Adres:</strong> ÜÇ EVLER MAHALLESİ BEŞEVLER KÜÇÜK SANAYİ SİTESİ 16. SOKAK 25/A BLOK NO:51 NİLÜFER / BURSA
                     </li>
                     <li>
-                      <strong>Telefon:</strong> ---
+                      <strong>Telefon:</strong> +90 224 494 19 72
                     </li>
                     <li>
                       <strong>E-Posta:</strong> info@assinerji.com
